# sky-trem

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
skyTrem_plugin/: skyTrem_plugin.cpp  skyTrem_plugin.h
skyTrem_plugin/include/Tremolo/: Parameters.h
skyTrem_plugin/source/: Parameters.cpp  PluginProcessor.cpp
sky_trem_plugin/: parameterParser.py  sky_trem_plugin.cpp  sky_trem_plugin.h
sky_trem_plugin/include/: BypassTransitionSmoother.h  CustomLookAndFeel.h  JsonSerializer.h  LfoVisualizer.h  ModulationRateSlider.h  Parameters.h  PluginEditor.h  PluginProcessor.h  SkyComboBox01.h  SkyRotarySlider01.h  Tremolo.h
sky_trem_plugin/include/Tremolo/: PluginProcessor.h  Tremolo.h
sky_trem_plugin/source/: BypassTransitionSmoother.cpp  CustomLookAndFeel.cpp  JsonSerializer.cpp  LfoVisualizer.cpp  ModulationRateSlider.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp  SkyComboBox01.cpp  SkyRotarySlider01.cpp  Tremolo.cpp
test/: CMakeLists.txt
test/source/: JsonSerializerTest.cpp
